These changes resolve the alignment issue on NODE_ENV=production builds.
Ref : Footer logos on homepage are misaligned on production build #642

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -456,6 +456,9 @@
 
 .home-credit-logos {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .home-credit-logo {
